# careslab_dvrk_ros2

./: .gitignore  README.md  run_dvrk.sh
dvrk_assistant_bridge/: CMakeLists.txt
dvrk_assistant_bridge/scripts/: bridge_node_py.py
dvrk_assistant_bridge/src/: bridge_node.cpp
dvrk_autocamera/launch/: test_hardware.launch
dvrk_autocamera/scripts/: autocamera_algorithm.py  autocamera_control_node.py
dvrk_cares_rqt_plugin/launch/: test_hardware.launch
dvrk_cares_rqt_plugin/resource/: MyPlugin.ui
dvrk_cares_rqt_plugin/scripts/: mainui.py  mainuiRun.py
dvrk_cares_rqt_plugin/src/dvrk_cares_rqt_plugin/: careslab_module.py
dvrk_clutch_and_move/scripts/: clutch_control.py
dvrk_joystick/scripts/: joystick_camera_control.py
dvrk_safety/: CMakeLists.txt  package.xml
dvrk_safety/data/: blink_rates.txt  mtm_safety_data.txt  psm_data.txt
dvrk_safety/launch/: safety.launch
dvrk_safety/src/: blink_detection.py  blink_detection_final.py  main_safety.py  mtm_safety.py  psm_safety.py
dvrk_safety/src/blink_detection/: blink_detection.py  blink_detection_camera.py  blink_detection_cameraRP.py  blink_detection_freq.py
dvrk_teleop/: CMakeLists.txt  package.xml
dvrk_teleop/scripts/: teleoperation.py
dvrk_voice/: command_dataframe_small.csv
dvrk_voice/scripts/: alexa_voice.py  classification.py  requirements.txt  run_chatgpt.sh  run_voice.sh  run_whisper_roberta.sh  test_mic_vad.py  test_vosk.py  test_whisper.py  vosk_gptchat.py  whisper_roberta.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
(+24 files in other folders)
